Changes in 4.5.1

1)  Fix syntax error in /sbin/shorewall.

2)  Don't generate source type rule for ICMP/ICMPv6.

Changes in 4.5.0

1)  Allow control over how the Mark is used.

2)  Generate warning on <macro>/<param>.

3)  Add a new optimization option.

4)  Combine identical logging chains.

5)  Added ACCOUNTING and DYNAMIC_BLACKLIST options.

6)  Don't unconditionally pass traffic from routemarked interfaces
    through the tcpre chain.

7)  Automatically assign mark values.

8)  Simplified Traffic Shaping
