@@ -523,7 +523,8 @@
 
       <arg choice="plain"><option>show</option></arg>
 
-      <arg choice="plain"><option>tc</option></arg>
+      <arg
+      choice="plain"><option>tc</option><arg><replaceable>device</replaceable></arg></arg>
     </cmdsynopsis>
 
     <cmdsynopsis>
@@ -1325,7 +1326,9 @@
 
               <listitem>
                 <para>Displays information about queuing disciplines, classes
-                and filters.</para>
+                and filters. With Shorewall 4.5.1 and later, the display can
+                be restricted to a specified
+                <replaceable>device</replaceable>.</para>
               </listitem>
             </varlistentry>
 
