@@ -426,7 +426,8 @@
 
       <arg choice="plain"><option>show</option></arg>
 
-      <arg choice="plain"><option>tc</option></arg>
+      <arg
+      choice="plain"><option>tc</option><arg><replaceable>device</replaceable></arg></arg>
     </cmdsynopsis>
 
     <cmdsynopsis>
@@ -1120,7 +1121,9 @@
 
               <listitem>
                 <para>Displays information about queuing disciplines, classes
-                and filters.</para>
+                and filters. Beginning with Shorewall6 4.5.1, the display can
+                be restricted to a specified
+                <replaceable>device</replaceable>.</para>
               </listitem>
             </varlistentry>
 
