@@ -38,7 +38,14 @@ Shorewall 4.5.1
 None.
 
 ----------------------------------------------------------------------------
-                N E W   F E A T U R E S   I N   4 . 5 . 0
+                N E W   F E A T U R E S   I N   4 . 5 . 1
+----------------------------------------------------------------------------
+
+1)  You may now restrict the output of 'show tc' by specifying the name
+    of an interface (e.g., "show tc eth0").
+
+----------------------------------------------------------------------------
+                N E W   F E A T U R E S   I N   4 . 5
 ----------------------------------------------------------------------------
 
 1)  The shorewall.conf options WIDE_TC_MARKS and HIGH_ROUTE_MARKS are
