@@ -4,6 +4,8 @@ Changes in 4.5.1
 
 2)  Don't generate source type rule for ICMP/ICMPv6.
 
+3)  Add <device> argument to 'show tc'.
+
 Changes in 4.5.0
 
 1)  Allow control over how the Mark is used.
